updated portfolio with new project and new technologies

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ashik-Himel :: Frontend Web Developer</title>
+    <title>Ashik-Himel :: MERN Stack Developer</title>
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
@@ -44,7 +44,7 @@
           <div class="nav-profile">
             <img src="assets/images/my-photo.png" alt="My Photo" />
             <h3>Ashik-<span class="colored-text">Himel</span></h3>
-            <span>Frontend Web Developer</span>
+            <span>MERN Stack Developer</span>
           </div>
           <nav class="nav-section" id="navbar">
             <ul id="nav-pills">
@@ -110,20 +110,15 @@
             <span class="text">Hello</span>
           </div>
           <h1>I'm Ashik-<span class="colored-text">Himel</span></h1>
-          <h3>Frontend Web Developer</h3>
+          <h3>MERN Stack Developer</h3>
           <p>
-            I'm from Dhaka, Bangladesh. I'm studying in B.Sc. in CSE in Uttara
-            University. I'm skilled in HTML, CSS, Sass, Bootstrap, Tailwind CSS,
-            JavaScript, React JS and so on. I'm providing Frontend Web
-            Developement services with 2 years of experience.
+            I'm from Dhaka, Bangladesh. I'm studying in B.Sc. in CSE in Uttara University. I'm skilled in HTML, CSS, Tailwind CSS, JavaScript, React JS, Firebase, Node JS, Express JS, MongoDB and so on. I am continuously learning about new technologies and working with full stack projects.
           </p>
           <div class="button-group">
             <a href="#about" class="button"
               >About Me <i class="fa-solid fa-arrow-right"></i
             ></a>
-            <a href="#services" class="button button-alt"
-              >My Services <i class="fa-solid fa-gear"></i
-            ></a>
+            <a href="assets/files/Ashikujjaman_Himel.pdf" download="Ashikujjaman Himel" class="button button-alt">Resume <i class="fa-solid fa-download"></i></a>
           </div>
         </div>
         <div class="right-div">
@@ -139,20 +134,15 @@
         <span>Here is a brief about myself that let you know who I am.</span>
         <div class="flex-box">
           <div class="left-div">
-            I am Ashik-Himel, Frontend Web Developer from Dhaka, Bangladesh. I
-            am studying in B.Sc. in CSE in Uttara University. I am skilled in
-            HTML, CSS, Sass, Bootstrap, Tailwind CSS, JavaScript, React JS and
-            so on. I am providing Frontend Web Developement services with
-            <span class="experience-year"></span> years of experiences. I have 1
-            year of experience in Account & eCommerce Manager at Zihad Shoe.
-            Thank you so much for visiting my portfolio.
+            I am Ashik-Himel, MERN Stack Developer from Dhaka, Bangladesh. I am studying in B.Sc. in CSE in Uttara University. I am skilled in
+            HTML, CSS, Tailwind CSS, JavaScript, React JS, Firebase, Node JS, Express JS, MongoDB and so on. I am continuously learning about new technologies and working with full stack projects. I have 1 year of experience in eCommerce Manager at Zihad Shoe. Thank you so much for visiting my portfolio.
             <div class="about-info-box">
               <div>
                 <span>0<span class="experience-year"></span>+</span>
                 <span>Years of<br />Experiences</span>
               </div>
               <div>
-                <span>100+</span>
+                <span>50+</span>
                 <span>Projects<br />Completed</span>
               </div>
               <div>
@@ -161,12 +151,7 @@
               </div>
             </div>
             <div class="button-group">
-              <a
-                href="assets/files/Resume-of-Ashikujjaman-Himel.pdf"
-                class="button"
-                download=""
-                >Download CV <i class="fa-solid fa-cloud-arrow-down"></i
-              ></a>
+              <a href="#services" class="button">My Services <i class="fa-solid fa-gear"></i></a>
               <a href="#works" class="button button-alt"
                 >My Works <i class="fa-solid fa-code"></i
               ></a>
@@ -199,24 +184,24 @@
               <hr />
               <p>
                 I am studying in B.Sc in CSE in Uttara University. My expected
-                graduation year is 2026. My current CGPA 3.93.
+                graduation year is 2026. My current CGPA 3.86.
               </p>
             </div>
             <div class="card-box">
               <h3>HSC</h3>
-              <span>Sreepur MRA College</span>
+              <span>Sreepur MRA Govt. College</span>
               <hr />
               <p>
-                I passed HSC from Sreepur MRA College in 2021. My board was
+                I passed HSC from Sreepur MRA Govt. College in 2021. My board was
                 Dhaka. I got 4.17 out of 5 from Science.
               </p>
             </div>
             <div class="card-box">
               <h3>SSC</h3>
-              <span>Sreepur Pilot High School</span>
+              <span>Sreepur Govt. Pilot High School</span>
               <hr />
               <p>
-                I passed SSC from Sreepur Pilot High School in 2019. My board
+                I passed SSC from Sreepur Govt. Pilot High School in 2019. My board
                 was Dhaka. I got 4.56 out of 5 from Science.
               </p>
             </div>
@@ -227,7 +212,7 @@
               <span>Programming Hero</span>
               <hr />
               <p>
-                I completed "Complete Web Developement" course from Programming
+                I completed "Complete Web Development" course from Programming
                 Hero in 2023. My batch no. was 8.
               </p>
             </div>
@@ -236,7 +221,7 @@
               <span>Interactive Care</span>
               <hr />
               <p>
-                I completed "Full Stack Web Developement" course from
+                I completed "Full Stack Web Development" course from
                 Interactive Care in 2021. My batch no. was 2.
               </p>
             </div>
@@ -246,7 +231,7 @@
               <hr />
               <p>
                 I completed "Basic Computer Application (360 Hours)" course from
-                Digital Computer Training Academy in 2020.
+                Digital Computer Training Academy in 2022.
               </p>
             </div>
           </div>
@@ -266,8 +251,7 @@
               <span>Zihad Shoe</span>
               <hr />
               <p>
-                I worked as Account and eCommerce Manager in Zihad Shoe,
-                Sreepur, Gazipur from Nov, 2020 to Dec, 2021.
+                I worked as eCommerce Manager in Zihad Shoe, Sreepur, Gazipur from Nov, 2020 to Dec, 2021.
               </p>
             </div>
           </div>
@@ -299,22 +283,11 @@
             <div class="skill-box">
               <div class="skill-details">
                 <span>CSS</span>
-                <span class="skill-percent">90%</span>
+                <span class="skill-percent">95%</span>
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 90%"></div>
-                </div>
-              </div>
-            </div>
-            <div class="skill-box">
-              <div class="skill-details">
-                <span>Bootstrap</span>
-                <span class="skill-percent">85%</span>
-              </div>
-              <div class="progress-area">
-                <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 85%"></div>
+                  <div class="progress-status" style="width: 95%"></div>
                 </div>
               </div>
             </div>
@@ -340,60 +313,60 @@
                 </div>
               </div>
             </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>React JS</span>
+                <span class="skill-percent">80%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 80%"></div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="right-div">
             <div class="skill-box">
               <div class="skill-details">
-                <span>React JS</span>
-                <span class="skill-percent">85%</span>
-              </div>
-              <div class="progress-area">
-                <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 85%"></div>
-                </div>
-              </div>
-            </div>
-            <div class="skill-box">
-              <div class="skill-details">
                 <span>Firebase</span>
-                <span class="skill-percent">80%</span>
+                <span class="skill-percent">70%</span>
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%"></div>
+                  <div class="progress-status" style="width: 70%"></div>
                 </div>
               </div>
             </div>
             <div class="skill-box">
               <div class="skill-details">
-                <span>Python</span>
-                <span class="skill-percent">80%</span>
+                <span>Node JS</span>
+                <span class="skill-percent">60%</span>
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%"></div>
+                  <div class="progress-status" style="width: 60%"></div>
                 </div>
               </div>
             </div>
             <div class="skill-box">
               <div class="skill-details">
-                <span>C</span>
-                <span class="skill-percent">95%</span>
+                <span>Express JS</span>
+                <span class="skill-percent">60%</span>
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 95%"></div>
+                  <div class="progress-status" style="width: 60%"></div>
                 </div>
               </div>
             </div>
             <div class="skill-box">
               <div class="skill-details">
-                <span>C++</span>
-                <span class="skill-percent">80%</span>
+                <span>MongoDB</span>
+                <span class="skill-percent">60%</span>
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%"></div>
+                  <div class="progress-status" style="width: 60%"></div>
                 </div>
               </div>
             </div>
@@ -410,33 +383,27 @@
         <div class="card-area">
           <div class="services-card">
             <div class="card-box">
+              <h3>MERN App. Dev.</h3>
+              <span>React, Node, Express, MongoDB</span>
+              <hr />
+              <p>
+                I am providing mern stack application development services where I am using React, Node, Express, MongoDB.
+              </p>
+            </div>
+            <div class="card-box">
               <h3>Frontend Web Dev.</h3>
-              <span>HTML, CSS, JavaScript</span>
+              <span>Tailwind, React, Firebase</span>
               <hr />
               <p>
-                I can develope website, clone website with pixel perfect and
-                responsively with HTML, CSS, Bootstrap, Tailwind CSS,
-                JavaScript.
+                I am providing frontend web development services where I am using Tailwind CSS, Daisy UI, React JS, Firebase and so on.
               </p>
             </div>
             <div class="card-box">
-              <h3>Single Page Dev.</h3>
-              <span>React JS</span>
+              <h3>Figma to Web</h3>
+              <span>Tailwind, React JS, Firebase</span>
               <hr />
               <p>
-                I can develope website, clone website with pixel perfect and
-                responsively with React JS. In addition, I use JSX, CSS and
-                JavaScript.
-              </p>
-            </div>
-            <div class="card-box">
-              <h3>PSD to HTML</h3>
-              <span>HTML, CSS, JavaScript</span>
-              <hr />
-              <p>
-                I can convert PSD / Figma / Adobe XD to HTML with pixel perfect
-                and responsively with HTML, CSS, Bootstrap, Tailwind CSS,
-                JavaScript.
+                I am providing Figma to Web services where I am using HTML, CSS, Tailwind CSS, JavaScript, React JS, and so on.
               </p>
             </div>
           </div>
@@ -455,33 +422,31 @@
           <div class="works-card">
             <div class="works-card-box">
               <div class="image-box">
-                <img src="assets/images/mediamax-1.png" alt="Media Max" />
+                <img src="assets/images/circle-sync.png" alt="CircleSync" />
                 <div class="portfolio-links">
-                  <a href="https://mediamax.com.bd" target="_blank"
+                  <a href="https://github.com/Ashik-Himel/circle-sync-client" target="_blank"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
               </div>
               <div class="works-info">
                 <div>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <span>JavaScript</span>
+                  <span>MERN Application</span>
                 </div>
                 <h3>
-                  Media Max - Authorized Distributor of Banglalink Digital
+                  CircleSync :: Full Stack Forum Platform
                 </h3>
               </div>
             </div>
             <div class="works-card-box">
               <div class="image-box">
                 <img
-                  src="assets/images/learn-with-ashik-himel-1.png"
-                  alt="Learn with Ashik-Himel"
+                  src="assets/images/study-hub.png"
+                  alt="StudyHub"
                 />
                 <div class="portfolio-links">
                   <a
-                    href="https://learn-with-ashik-himel.netlify.app"
+                    href="https://github.com/Ashik-Himel/study-hub-client"
                     target="_blank"
                     ><i class="fa-solid fa-link"></i
                   ></a>
@@ -489,31 +454,26 @@
               </div>
               <div class="works-info">
                 <div>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <span>JavaScript</span>
+                  <span>MERN Application</span>
                 </div>
-                <h3>Learn with Ashik-Himel :: Learn Programming Language</h3>
+                <h3>StudyHub :: Full Stack Group Study Platform</h3>
               </div>
             </div>
             <div class="works-card-box">
               <div class="image-box">
-                <img src="assets/images/asif-ahamed-1.png" alt="Asif Ahamed" />
+                <img src="assets/images/brand-shop.png" alt="Brand Shop" />
                 <div class="portfolio-links">
-                  <a href="https://asifahamed.com" target="_blank"
+                  <a href="https://github.com/Ashik-Himel/brand-shop-client" target="_blank"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
               </div>
               <div class="works-info">
                 <div>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <span>JavaScript</span>
+                  <span>MERN Application</span>
                 </div>
                 <h3>
-                  Asif Ahamed :: Managing Director of Media Max, Media Link,
-                  etc.
+                  Brand Shop :: Full Stack eCommerce Website
                 </h3>
               </div>
             </div>
