--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -95,21 +95,76 @@
           <div class="works-card">
             <div class="works-card-box">
               <div class="image-box">
-                <img src="../assets/images/mediamax-1.png" alt="Media Max" />
+                <img src="../assets/images/circle-sync.png" alt="CircleSync" />
                 <div class="portfolio-links">
-                  <a href="https://mediamax.com.bd" target="_blank"
+                  <a href="https://github.com/Ashik-Himel/circle-sync-client" target="_blank"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
               </div>
               <div class="works-info">
                 <div>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <span>JavaScript</span>
+                  <span>MERN Application</span>
                 </div>
                 <h3>
-                  Media Max - Authorized Distributor of Banglalink Digital
+                  CircleSync :: Full Stack Forum Platform
+                </h3>
+              </div>
+            </div>
+            <div class="works-card-box">
+              <div class="image-box">
+                <img
+                  src="../assets/images/study-hub.png"
+                  alt="StudyHub"
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="https://github.com/Ashik-Himel/study-hub-client"
+                    target="_blank"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="works-info">
+                <div>
+                  <span>MERN Application</span>
+                </div>
+                <h3>StudyHub :: Full Stack Group Study Platform</h3>
+              </div>
+            </div>
+            <div class="works-card-box">
+              <div class="image-box">
+                <img src="../assets/images/brand-shop.png" alt="Brand Shop" />
+                <div class="portfolio-links">
+                  <a href="https://github.com/Ashik-Himel/brand-shop-client" target="_blank"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="works-info">
+                <div>
+                  <span>MERN Application</span>
+                </div>
+                <h3>
+                  Brand Shop :: Full Stack eCommerce Website
+                </h3>
+              </div>
+            </div>
+            <div class="works-card-box">
+              <div class="image-box">
+                <img src="../assets/images/mediamax-1.png" alt="Media Max" />
+                <div class="portfolio-links">
+                  <a href="https://github.com/Ashik-Himel/media-max-client" target="_blank"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="works-info">
+                <div>
+                  <span>MERN Application</span>
+                </div>
+                <h3>
+                  Media Max - Authorized Distributor of Banglalink
                 </h3>
               </div>
             </div>
@@ -133,7 +188,7 @@
                   <span>CSS</span>
                   <span>JavaScript</span>
                 </div>
-                <h3>Learn with Ashik-Himel :: Learn Programming Language</h3>
+                <h3>Learn with Ashik-Himel :: Learning Platform</h3>
               </div>
             </div>
             <div class="works-card-box">
@@ -155,8 +210,7 @@
                   <span>JavaScript</span>
                 </div>
                 <h3>
-                  Asif Ahamed :: Managing Director of Media Max, Media Link,
-                  etc.
+                  Asif Ahamed :: Managing Director of Media Max
                 </h3>
               </div>
             </div>
